--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToDoEsteAlexis</string>
+    <string name="sigin_up">Sigin Up</string>
+    <string name="login_register">Login / Register</string>
+    <string name="log_in">Log In</string>
 </resources>
